--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -212,6 +212,7 @@
                         android:orientation="horizontal">
 
                         <android.support.v7.widget.SwitchCompat
+                            android:id="@+id/recentlyViewed"
                             style="@style/tradeGothicLTStdLight_18"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
