Started work on Time/Calendar for Booking

--- a/MyHome/app/src/main/res/layout/book_select_time.xml
+++ b/MyHome/app/src/main/res/layout/book_select_time.xml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/calendar"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="18dp">
 
-    <TextView
+    <include
         android:id="@+id/date_header"
-        style="@style/MonthTextAppearance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Date Stuff Here..."
-        android:textSize="20sp"
-        tools:ignore="HardcodedText" />
+        layout="@layout/book_date_header" />
 
     <com.dignityhealth.myhome.views.FlowLayout
         android:id="@+id/time_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/date_header"
         android:orientation="horizontal">
 
         <!--We add buttons dynamically-->
@@ -50,4 +43,4 @@
 
     </com.dignityhealth.myhome.views.FlowLayout>
 
-</LinearLayout>
+</RelativeLayout>
