--- a/MyHome/app/src/main/res/layout/book_calendar.xml
+++ b/MyHome/app/src/main/res/layout/book_calendar.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/calendar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:mcv_arrowColor="@color/primary"
-    app:mcv_dateTextAppearance="@style/DayTextAppearance"
-    app:mcv_headerTextAppearance="@style/MonthTextAppearance"
-    app:mcv_leftArrowMask="@mipmap/caret_blue"
-    app:mcv_rightArrowMask="@mipmap/caret_blue"
-    app:mcv_showOtherDates="out_of_range"
-    app:mcv_tileHeight="40dp"
-    app:mcv_tileWidth="55dp"
-    app:mcv_titleAnimationOrientation="horizontal"
-    app:mcv_weekDayTextAppearance="@style/WeekDayTextAppearance" />
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="18dp">
 
+    <include
+        android:id="@+id/date_header"
+        layout="@layout/book_date_header" />
+
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:mcv_arrowColor="@color/primary"
+        app:mcv_dateTextAppearance="@style/DayTextAppearance"
+        app:mcv_headerTextAppearance="@null"
+        app:mcv_leftArrowMask="@mipmap/caret_blue"
+        app:mcv_rightArrowMask="@mipmap/caret_blue"
+        app:mcv_showOtherDates="out_of_range"
+        app:mcv_tileHeight="40dp"
+        app:mcv_tileWidth="55dp"
+        app:mcv_titleAnimationOrientation="horizontal"
+        app:mcv_weekDayTextAppearance="@style/WeekDayTextAppearance" />
+
+</LinearLayout>
