--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
     </style>
 
     <style name="ToolBarTheme.ToolBarStyle.Light" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorPrimary">@color/primary</item>
-        <item name="android:textColor">@color/primary</item>
+        <item name="android:textColorPrimary">@color/md_blue_grey_650</item>
+        <item name="android:textColor">@color/md_blue_grey_650</item>
         <item name="android:textColorSecondary">@color/primary</item>
         <item name="android:textColorPrimaryInverse">@color/toolbar_white_text</item>
     </style>
