--- a/MyHome/app/src/main/res/layout/bottom_navigation_layout.xml
+++ b/MyHome/app/src/main/res/layout/bottom_navigation_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="1dp"
         android:background="@color/text_darker" />
 
-    <android.support.design.widget.BottomNavigationView
+    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
