Center FlowLayout for Booking Times

--- a/MyHome/app/src/main/res/layout/book_select_time.xml
+++ b/MyHome/app/src/main/res/layout/book_select_time.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:layout_gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="18dp">
 
@@ -13,8 +14,9 @@
     <com.dignityhealth.myhome.views.FlowLayout
         android:id="@+id/time_group"
         android:layout_width="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_below="@id/date_header"
         android:orientation="horizontal">
 
         <!--We add buttons dynamically-->
@@ -43,4 +45,4 @@
 
     </com.dignityhealth.myhome.views.FlowLayout>
 
-</RelativeLayout>
+</LinearLayout>
