Improved click bounds for Calendar arrows

--- a/MyHome/app/src/main/res/layout/book_date_header.xml
+++ b/MyHome/app/src/main/res/layout/book_date_header.xml
@@ -19,6 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/date"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:layout_alignTop="@id/date"
         android:layout_marginRight="42dp"
         android:layout_toLeftOf="@id/date"
@@ -30,6 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/date"
         android:layout_alignTop="@id/date"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:layout_marginLeft="42dp"
         android:layout_toRightOf="@id/date"
         android:rotation="180"
