--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -105,14 +105,41 @@
             android:textSize="20sp"
             tools:ignore="HardcodedText" />
 
+        <ImageView
+            android:id="@+id/phone_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/facility_address"
+            android:layout_marginTop="30dp"
+            android:layout_toLeftOf="@id/phone"
+            android:src="@mipmap/phone" />
+
+        <TextView
+            android:id="@+id/phone"
+            style="style/tradeGothicLTStd_16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/phone_icon"
+            android:layout_alignTop="@id/phone_icon"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="12dp"
+            android:autoLink="phone"
+            android:gravity="center"
+            android:text="1-844-274-8497"
+            android:textColorLink="@color/primary"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+
+
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_below="@id/facility_address"
+            android:layout_below="@id/phone"
             android:layout_marginEnd="18dp"
             android:layout_marginStart="18dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="24dp"
             android:background="@color/beige" />
 
         <include
