--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -44,9 +44,10 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginLeft="42dp"
                     android:layout_marginRight="42dp"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:hint="@string/prompt_first_name"
                     android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
+                    android:inputType="text"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp" />
@@ -60,9 +61,10 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginLeft="42dp"
                     android:layout_marginRight="42dp"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:hint="@string/prompt_last_name"
                     android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
+                    android:inputType="text"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp" />
