--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -23,6 +23,7 @@
                     android:id="@+id/first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:ellipsize="end"
                     android:hint="@string/first_name"
                     android:inputType="textCapWords"
@@ -40,6 +41,7 @@
                     android:id="@+id/last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:ellipsize="end"
                     android:hint="@string/last_name"
                     android:inputType="textCapWords"
@@ -57,6 +59,7 @@
                     android:id="@+id/preferred_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:ellipsize="end"
                     android:hint="@string/preferred_name"
                     android:inputType="textCapWords"
