--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/titleBar"
@@ -158,12 +158,39 @@
                             android:textStyle="bold" />
                     </RadioGroup>
 
+                    <RelativeLayout
+                        android:id="@+id/distanceRangeLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/sortByGroup"
+                        android:visibility="gone">
+
+                        <android.support.v7.widget.AppCompatSeekBar
+                            android:id="@+id/distanceRange"
+                            android:layout_width="match_parent"
+                            android:layout_height="35dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_toLeftOf="@+id/distanceRangeText"
+                            android:max="100"
+                            android:secondaryProgress="@color/accent" />
+
+                        <TextView
+                            android:id="@+id/distanceRangeText"
+                            style="@style/tradeGothicLTStdLight_18"
+                            android:layout_width="80dp"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginTop="20dp"
+                            android:gravity="center"
+                            android:text="100 mi" />
+                    </RelativeLayout>
+
                     <TextView
                         android:id="@+id/filterByTitle"
                         style="@style/tradeGothicLTStdLight_20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/sortByGroup"
+                        android:layout_below="@+id/distanceRangeLayout"
                         android:layout_marginTop="16dp"
                         android:text="@string/filter_by"
                         android:textStyle="bold" />
