--- a/MyHome/app/src/main/res/layout/book_select_time.xml
+++ b/MyHome/app/src/main/res/layout/book_select_time.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:layout_gravity="center_horizontal"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="18dp">
 
@@ -14,9 +14,9 @@
     <com.dignityhealth.myhome.views.FlowLayout
         android:id="@+id/time_group"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <!--We add buttons dynamically-->
@@ -44,5 +44,16 @@
         <!--android:textOn="10:30am" />-->
 
     </com.dignityhealth.myhome.views.FlowLayout>
+
+    <Button
+        android:id="@+id/empty_appointments"
+        style="@style/selectableButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="No Appointments Today"
+        android:visibility="gone" />
 
 </LinearLayout>
