--- a/MyHome/app/src/main/res/drawable/ic_recentgrey.xml
+++ b/MyHome/app/src/main/res/drawable/ic_recentgrey.xml
@@ -6,11 +6,11 @@
     <path
         android:fillColor="#00000000"
         android:pathData="M11,11m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"
-        android:strokeColor="#097288"
+        android:strokeColor="#484B4D"
         android:strokeWidth="2" />
     <path
         android:fillColor="#00000000"
         android:pathData="M10.235,5.691l-0.159,7.073l4.948,-3.137"
-        android:strokeColor="#097288"
+        android:strokeColor="#484B4D"
         android:strokeWidth="2" />
 </vector>
