--- a/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
@@ -107,7 +107,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:drawableLeft="@drawable/ic_recent_blue"
+                    android:drawableLeft="@drawable/ic_recentgrey"
                     android:drawablePadding="8dp"
                     android:lines="1"
                     android:maxLines="1"
