--- a/MyHome/app/src/main/res/layout/book_dialog_reason.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_reason.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="18dp">
+    android:padding="18dp"
+    android:theme="@style/textInputLayoutStyle">
 
     <EditText
         android:id="@+id/booking_reason"
