--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <style name="textInputLayoutStyle" parent="Widget.Design.TextInputLayout">
+        <item name="android:textColorHint">@color/text_darker</item>
+    </style>
+
     <style name="ToolBarTheme.ToolBarStyle.Light" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:textColorPrimary">@color/md_blue_grey_650</item>
         <item name="android:textColor">@color/md_blue_grey_650</item>
