Recently viewed change

--- a/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
@@ -116,7 +116,7 @@
                     android:gravity="center_vertical"
                     android:maxLines="1"
                     android:text="Recently viewed"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
             </LinearLayout>
         </RelativeLayout>
 
