--- a/MyHome/app/src/main/res/layout/book_select_status.xml
+++ b/MyHome/app/src/main/res/layout/book_select_status.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="18dp"
         android:text="@string/no_appointments_new_patients"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:visibility="gone" />
 
 </LinearLayout>
