--- a/MyHome/app/src/main/res/layout/book_calendar.xml
+++ b/MyHome/app/src/main/res/layout/book_calendar.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="18dp">
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp">
 
     <include
         android:id="@+id/date_header"
