--- a/MyHome/app/src/main/res/layout/book_confirmation.xml
+++ b/MyHome/app/src/main/res/layout/book_confirmation.xml
@@ -7,7 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="18dp">
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp">
 
         <TextView
             style="@style/tradeGothicLTStdLight_14"
