--- a/MyHome/app/src/main/res/layout/book_select_time.xml
+++ b/MyHome/app/src/main/res/layout/book_select_time.xml
@@ -5,7 +5,8 @@
     android:layout_gravity="center_horizontal"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="18dp">
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp">
 
     <include
         android:id="@+id/date_header"
@@ -15,8 +16,8 @@
         android:id="@+id/time_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="12dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -49,9 +50,9 @@
     <Button
         android:id="@+id/empty_appointments"
         style="@style/selectableButtonStyle"
-        android:layout_marginTop="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:gravity="center"
         android:padding="12dp"
         android:text="@string/no_appointments_available"
