--- a/MyHome/app/src/main/res/layout/stats_profile.xml
+++ b/MyHome/app/src/main/res/layout/stats_profile.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profile_details_info"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="18dp">
 
     <TextView
@@ -15,99 +16,123 @@
         android:textSize="22sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/label_accepting_new_patients"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/profile_header"
-        android:layout_marginTop="18dp"
-        android:maxWidth="200dp"
-        android:text="@string/accepting_new_patients"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="18dp">
 
-    <TextView
-        android:id="@+id/accepting_new_patients"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/label_accepting_new_patients"
-        android:text="@string/yes"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".65"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/label_languages"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/label_accepting_new_patients"
-        android:text="@string/languages"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/label_accepting_new_patients"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/accepting_new_patients"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/languages"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/label_languages"
-        android:layout_below="@id/label_languages"
-        android:minHeight="70dp"
-        android:text="English"
-        android:textSize="18sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/accepting_new_patients"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/yes"
+                android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/label_gender"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/accepting_new_patients"
-        android:layout_marginTop="24dp"
-        android:maxWidth="200dp"
-        android:text="@string/gender"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/gender"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/label_gender"
-        android:text="@string/male"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".35"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/label_experience"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/languages"
-        android:text="@string/experience"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/label_languages"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/languages"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/experience"
-        style="@style/tradeGothicLTStdLight_14"
-        android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/languages"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="English"
+                android:textSize="18sp"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/label_experience"
-        android:layout_below="@id/label_experience"
-        android:text="30 Years"
-        android:textSize="18sp"
-        tools:ignore="HardcodedText" />
+        android:layout_marginTop="18dp">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".65"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/label_gender"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/gender"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/gender"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/male"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".35"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/label_experience"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/experience"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/experience"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="30 Years"
+                android:textSize="18sp"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/label_philosophy"
         style="@style/tradeGothicLTStdLight_14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/gender"
         android:layout_marginTop="24dp"
         android:text="@string/care_philosophy"
         android:textSize="20sp"
@@ -118,7 +143,6 @@
         style="@style/tradeGothicLTStdLight_14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/label_philosophy"
         android:text="Specialities Request: Pediatric\nGastroenterology"
         android:textSize="18sp"
         tools:ignore="HardcodedText" />
@@ -128,7 +152,6 @@
         style="@style/tradeGothicLTStdLight_14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/philosophy"
         android:text="@string/locations"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -138,9 +161,8 @@
         style="@style/tradeGothicLTStdLight_14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/label_locations"
         android:text="90 Madison St\nSte 504\nDenver, CO 80206"
         android:textSize="18sp"
         tools:ignore="HardcodedText" />
 
-</RelativeLayout>
+</LinearLayout>
