--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -207,32 +207,28 @@
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/email_label"
-            style="@style/tradeGothicLTStdLight_14"
-            android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/email_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/profile_label_marginTop"
-            android:text="@string/email" />
+            android:layout_marginBottom="16dp">
 
-        <TextView
-            android:id="@+id/email"
-            style="@style/tradeGothicLTStdLight_14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="kwelsh@prokarma.com"
-            android:textSize="@dimen/profile_text_size"
-            android:textStyle="bold" />
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress" />
 
-        <TextView
-            android:id="@+id/email_notice"
-            style="@style/tradeGothicLTStdLight_14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/profile_label_marginTop"
-            android:layout_marginTop="@dimen/profile_label_marginTop"
-            android:text="@string/you_cannot_edit_email_address"
-            android:textSize="13sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <EditText
+            android:id="@+id/booking_reason"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@drawable/edit_text_boarder_grey"
+            android:gravity="left"
+            android:hint="@string/booking_reason_hint" />
 
     </LinearLayout>
 </ScrollView>
