--- a/MyHome/app/src/main/res/layout/book_confirmation.xml
+++ b/MyHome/app/src/main/res/layout/book_confirmation.xml
@@ -11,6 +11,7 @@
         android:paddingRight="18dp">
 
         <TextView
+            android:id="@+id/date"
             style="@style/tradeGothicLTStdLight_14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,6 +21,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/time"
             style="@style/tradeGothicLTStdLight_14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,6 +31,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/address"
             style="@style/tradeGothicLTStdLight_14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,6 +42,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/reason"
             style="@style/tradeGothicLTStdLight_14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
