--- a/MyHome/app/src/main/res/layout/book_done.xml
+++ b/MyHome/app/src/main/res/layout/book_done.xml
@@ -8,10 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="18dp"
         android:paddingEnd="64dp"
-        android:paddingStart="64dp"
-        android:paddingTop="18dp">
+        android:paddingStart="64dp">
 
         <TextView
             android:id="@+id/book_success"
