Filter new design changes for selection.

--- a/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
@@ -25,7 +25,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="20dp"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerInside" />
 
         <RelativeLayout
             android:id="@+id/docInfoLayout"
