--- a/MyHome/app/src/main/res/layout/filter_group.xml
+++ b/MyHome/app/src/main/res/layout/filter_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:orientation="vertical">
@@ -11,4 +11,12 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/groupImage"
+        android:layout_width="12dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_carrot_blue" />
+
+</RelativeLayout>
