--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -11,6 +11,24 @@
         android:padding="18dp">
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/caregiver_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:visibility="gone">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/caregiver_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:hint="@string/caregiver_name"
+                android:inputType="textCapWords"
+                android:maxLines="1" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:id="@+id/first_name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -76,6 +94,61 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:entries="@array/profile_gender" />
+
+        <TextView
+            android:id="@+id/pregnant_label"
+            style="@style/tradeGothicLTStdLight_14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/are_you_pregnant"
+            android:textSize="13sp"
+            android:visibility="gone" />
+
+        <RadioGroup
+            android:id="@+id/group_pregnant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal"
+            android:visibility="visible">
+
+            <RadioButton
+                android:id="@+id/radio_not_pregnant"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/no"
+                android:textSize="13sp" />
+
+            <RadioButton
+                android:id="@+id/radio_pregnant"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="@string/yes"
+                android:textSize="13sp" />
+
+        </RadioGroup>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/weeks_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:visibility="gone">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/weeks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/weeks_pregnant"
+                android:inputType="number"
+                android:maxLength="2" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/dob_layout"
